communicated more flexbox properties and design response

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,8 @@ header {
 
 /* 
 What happens when we set the display property to flex? 
-TODO: Write your answer here 
+TODO: Write your answer here - Items in the scree behave as if they are in a container which when shrunk, they wrap or move 
+towards best fit rather than have others left out.
 */
 nav {
   display: flex;
@@ -56,7 +57,8 @@ footer {
 
 /* 
 What does the justify-content property do? 
-TODO: Write your answer here 
+TODO: Write your answer here - it allow items in the flexbox to either all be centered around the screen, moved from right end 
+towards the center or left end towards the center
 */
 .products {
   flex: 4;
@@ -70,7 +72,8 @@ TODO: Write your answer here
 /* 
 What is the flex property a shorthand property for?
 What is it doing here? 
-TODO: Write your answer here 
+TODO: Write your answer here - it is a 
+method of responding to different media screens
 */
 .card {
   border-style: solid;
@@ -95,7 +98,9 @@ TODO: Write your answer here
 /* 
 What does the flex-direction property define?
 What is it doing here? 
-TODO: Write your answer here 
+TODO: Write your answer here - it provides for an orientation 
+for the child elements to follow as they grow 
+within the page according to their sizes.
 */
 @media screen and (max-width: 768px) {
   main,
